# Postgresql_MCP

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  check_dept.py  claude_desktop_config.json  config.py  pyproject.toml  query.md  streamlit_app.py  test_output.py
archive/: Untitled-1.ipynb  client.py  debug_count_inmast.py  debug_schema.py  pty_server.py  requirements.txt  streamlit_app copy.py  test_daemon.py  today.md
docs/: ARCHITECTURE.md  query.md
old/: check_mcp_imports.py  check_mcp_imports_v2.py  db_server.py  debug_columns.py  debug_handshake.py  debug_join.py  debug_sql_syntax.py  debug_sqlcl.py  http_server.py  persistent_server.py  server.py  streamlit_app_http.py  streamlit_app_persistent.py  streamlit_app_v2.py
postgresql_mcp/: __init__.py  server.py
scripts/: setup_demo_data.py
sqlcl_mcp/: http_server.py  server.py
src/: __init__.py  config.py  server.py  streamlit_app.py
tests/: test.ipynb  test_output.py
